# r-type

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  installation.sh  installer.sh  test.cpp  vcpkg.json
.cache/clangd/index/: main.cpp.145BA663166C9E0C.idx  main.cpp.61FE64D09A50CA0C.idx  main.cpp.D94D9CFAAD997E07.idx  main.cpp.F354A347ED8D4DE9.idx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 0-FEAT.yml  1-REFACTOR.yml  2-BUG.yml
.github/workflows/: linter.yml  mirror.yml  windows-build.yml
Game/: game.cpp  game.hpp
configuration/: entity_structure.json  entity_test.json  map_structure.json
configuration/background/: Background.json
configuration/boss/: boss_1.json
configuration/enemy/: Enemy.json  Wall1.json  Wall2.json  Wall3.json  Wall4.json
configuration/ennemy/: ennemy_1.json
configuration/entity/: new entity.json
configuration/map/: map.json
configuration/pattern/: boss_1.json
configuration/player/: Player.json  player.json
configuration/weapon/: pistol.json  weapon_2.json
configuration/weapon/bullet/: EnemyBullet.json  PlayerBullet.json  bullet_1.json  bullet_2.json
documentation/benchmark/: asio.md  client_network.md  sfml.md  vcpkg.md
documentation/developer/: client_network.md  server_network.md
documentation/ecs/: Component.md  Factory.md  System.md
installation_scripts/: linux.sh  windows.ps1  windows.sh
scripts/: linux.sh  msvc.ps1  windows.ps1
src/: FlappyClientGame.cpp  FlappyClientGame.hpp  FlappyServerGame.cpp  FlappyServerGame.hpp  main_flappy_client.cpp  main_flappy_server.cpp  test_entity_factory  utils.hpp
src/appConfiguration/: CMakeLists.txt  ComponentDrawer.cpp  ComponentDrawer.hpp  Entity.hpp  GameEditor.cpp  GameEditor.hpp  JsonUtils.hpp  compiler.sh  imgui.ini  main.cpp
src/appConfiguration/configuration/ennemy/: Try.json
src/appConfiguration/configuration/entity/: new entity.json
src/appConfiguration/configuration/map/: Tonst.json
src/appConfiguration/configuration/player/: Test.json  bananor.json
src/client/: Asio.cpp  Asio.hpp  Asio_test.cpp  ClientGame.cpp  ClientGame.hpp  NetworkBuffer.cpp  NetworkBuffer.hpp  Packet.hpp  PacketCodec.cpp  PacketCodec.hpp  asio.cpp  asio.hpp  client.cpp  client.hpp  main.cpp  parser.cpp  parser.hpp
src/client/graphical/: Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  Window.cpp  Window.hpp  launcher  main.cpp  sfml_app
src/ecs/: IComponent.cpp  IComponent.hpp  main.cpp  relevant_data.hpp
src/ecs/Component/: AnimatedSprite.cpp  AnimatedSprite.hpp  Attack.cpp  Attack.hpp  Clock.cpp  Clock.hpp  Cooldown.cpp  Cooldown.hpp  Direction.cpp  Direction.hpp  EntitySpawner.cpp  EntitySpawner.hpp  Gravity.cpp  Gravity.hpp  Hitbox.cpp  Hitbox.hpp  Hp.cpp  Hp.hpp  Position.cpp  Position.hpp  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  Strategy.cpp  Strategy.hpp  Velocity.cpp  Velocity.hpp
src/ecs/Entity/: Entities.cpp  Entities.hpp  IMediatorEntity.cpp  IMediatorEntity.hpp  test_entity_factory.cpp
src/ecs/System/: CollisionSystem.cpp  CollisionSystem.hpp  DrawAnimatedSystem.cpp  DrawAnimatedSystem.hpp  DrawSpriteSystem.cpp  DrawSpriteSystem.hpp  GravitySystem.cpp  GravitySystem.hpp  ISystem.cpp  ISystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ShootSystem.cpp  ShootSystem.hpp  StrategySystem.cpp  StrategySystem.hpp  SystemList.hpp
src/flappyGame/: FlappyClientGame.cpp  FlappyClientGame.hpp  FlappyServerGame.cpp  FlappyServerGame.hpp  main_flappy_client.cpp  main_flappy_server.cpp
src/server/: ConfigParser.cpp  ConfigParser.hpp  EntityFactory.cpp  EntityFactory.hpp  FactoryInitExample.cpp  HowItWork.txt  NetworkBuffer.cpp  NetworkBuffer.hpp  NetworkClientBuffer.cpp  NetworkContinuousBuffer.cpp  NetworkServerBuffer.cpp  NetworkServerBuffer.hpp  Prototype.hpp  ServerGame.cpp  ServerGame.hpp  TestFactory.cpp  WaveManager.cpp  WaveManager.hpp  encoder.hpp  main.cpp  parser.cpp  parser.hpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
